Spacing fix.

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -192,6 +192,7 @@ input[type=text] {
 }
 #numbers .number {
 	font-weight:bolder;
+	white-space:nowrap;
 }
 #numbers .description {
 	flex:auto;
